--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,9 @@ dependencies {
     implementation 'com.fazecast:jSerialComm:[2.0.0,3.0.0)'
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    implementation 'com.opencsv:opencsv:5.9'
+    implementation 'org.apache.commons:commons-csv:1.11.0'
+    implementation 'net.java.dev.jna:jna:5.14.0'
 }
 
 test {
